name:                robot
version:             0.9.1
synopsis:            haskell example code
description:         Robot fight code snippets.
homepage:            https://github.com/frankhjung/robot#readme
license:             BSD3
license-file:        LICENSE
author:              Frank H Jung
maintainer:          frankhjung@linux.com
copyright:           Copyright © 2018-2021 Frank H Jung
category:            education
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

source-repository head
  type:             git
  location:         git@github.com:frankhjung/haskell-robot.git

executable robot
  hs-source-dirs:   app
                  , src
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -Wall
                    -threaded
  other-modules:    Robot
  build-depends:    base >= 4.13 && < 4.14

library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:  Robot
  ghc-options:      -Wall
  build-depends:    base >= 4.13 && < 4.14

test-suite test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
                  , src
  main-is:          Test.hs
  ghc-options:      -Wall
                    -Wno-orphans
                    -threaded
  other-modules:    Robot
  build-depends:    base >= 4.13 && < 4.14
                  , QuickCheck >= 2.13.2 && < 2.14

